Fix Railway build configuration
Changes:
- Update package.json with specific Node.js version (18.x)
- Add build script to package.json
- Remove railway.json (simplify configuration)
- Add Procfile for explicit start command
- Add nixpacks.toml for Nixpacks configuration
- Update .gitignore with data folder comments
- Add RAILWAY_FIX.md with detailed troubleshooting guide

This fixes the "Build image" failure on Railway by:
1. Explicitly specifying Node.js 18.x
2. Providing clear build and start commands
3. Using Railway-compatible configuration files
4. Removing conflicting railway.json

Railway should now successfully build and deploy the application.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ node_modules/
 .DS_Store
 *.log
 .env
+
+# Optional: Ignore data files but keep directory structure
+# Uncomment if you want to exclude production data
+# data/*.json
+# !data/.gitkeep
